# spf1

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  build.sh  docs.sh  package.xml  run.sh  test.sh
esp32/: main.c
nodes/aligner/: CMakeLists.txt  package.xml
nodes/aligner/src/: aligner_node.cpp
nodes/image_capture/: CMakeLists.txt  package.xml
nodes/image_capture/src/: image_node.cpp
nodes/imu_sensor/: CMakeLists.txt
nodes/imu_sensor/include/: MadgwickAHRS.h
nodes/imu_sensor/src/: MadgwickAHRS.cpp  imu_node.cpp
nodes/motor_controller/: CMakeLists.txt  package.xml
nodes/motor_controller/include/: motor_driver.h  pid.h
nodes/motor_controller/src/: motor_driver.cpp  motor_node.cpp  pid.cpp
nodes/path_planner/: CMakeLists.txt  package.xml
nodes/path_planner/src/: path_node.cpp
nodes/path_planner/test/: test_build.cpp
nodes/pr_sensor/: CMakeLists.txt  package.xml
nodes/pr_sensor/src/: pr_node.cpp
nodes/server/: CMakeLists.txt  package.xml
nodes/server/src/: server_node.cpp
nodes/state/: CMakeLists.txt  package.xml
nodes/state/include/: fsm.hpp
nodes/state/src/: fsm.cpp  state_node.cpp
nodes/status/: CMakeLists.txt  package.xml
nodes/status/include/: httplib.h
nodes/status/src/: status_node.cpp
nodes/stereo_vision/: CMakeLists.txt  package.xml
nodes/stereo_vision/src/: stereo_node.cpp
nodes/sun_finder/: CMakeLists.txt  package.xml
nodes/sun_finder/src/: sun_finder_node.cpp
nodes/test/: calibrate.py  capture_calibration_images.py  depth_test.cpp  test_cam.cpp  test_dual_camera.cpp  test_gstreamer.cpp  test_motor_driver.cpp  test_opencl.cpp
src/camera_stream/: test_dual_camera.c  test_opencl.cpp  test_opengl.cpp
src/imu_sensor/: CMakeLists.txt  package.xml
src/imu_sensor/src/: imu_node.cpp
src/motor_controller/: CMakeLists.txt
src/motor_controller/include/: motor_driver.h  pid_controller.h
src/motor_controller/src/: motor_controller.cpp  motor_driver.cpp  pid_controller.cpp  test_motor_driver.cpp
src/path_planner/: CMakeLists.txt  package.xml
src/path_planner/src/: path_planner.cpp
src/pr_sensor/: CMakeLists.txt
src/pr_sensor/src/: pr_node.cpp
