cmake_minimum_required(VERSION 3.8)
project(aligner)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic -Wno-unused-parameter)
endif()

find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(sensor_msgs REQUIRED)
find_package(std_msgs REQUIRED)

add_executable(aligner_node src/aligner_node.cpp)
target_link_libraries(aligner_node PUBLIC
      ${sensor_msgs_TARGETS}
      ${std_msgs_TARGETS}
      rclcpp::rclcpp
    )
include_directories(${OpenCV_INCLUDE_DIRS})

install(TARGETS
  aligner_node
  DESTINATION lib/${PROJECT_NAME}
)

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  set(ament_cmake_copyright_FOUND TRUE)
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

ament_package()
